<resources>
    <string name="alert_hint">Enter the Email Id to reset the password</string>
    <string name="coupon">Coupon</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="discount">Discount</string>
    <string name="No_Discount">0%</string>
    <string name="Free">No Delivery Charges</string>
    <string name="cart_total">Cart Total</string>
    <string name="placeOrder">Proceed to Payment</string>
    <string name="bill_details">Bill Details</string>
    <string name="app_name">FoodPanda</string>
    <string name="enter_the_id">Enter the Id</string>
    <string name="enter_password">Enter password</string>
    <string name="email_or_id">Email or Id</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="number_of_attempts_3">Number of attempts 3</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
    <string name="create_one">Create One</string>
    <string name="save">save</string>
    <string name="rupee_symbol">₹ </string>
    <string name="view_cart">View Cart</string>
    <string name="show">show</string>
    <string name="sign_up_for_yummy_food">Sign up for yummy food</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email_id">Enter your Email id</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="create_your_password">Create your password</string>
    <string name="re_enter_the_password">Re enter the password</string>
    <string name="get_location">Get location</string>
    <string name="ur_location">Ur location</string>
    <string name="create_account">Create account</string>
    <string name="home">Home</string>
    <string name="serach">Serach</string>
    <string name="myOrders">Order History</string>
    <string name="account">Account</string>
    <string name="enter_your_location">Enter your Location</string>
    <string name="menu_item">Menu Item</string>
    <string name="delivered">Delivered</string>
    <string name="ordered_on">ORDERED ON</string>
    <string name="order_history">Order History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_upi_id_or_phone_number">Enter your UPI id or Phone Number</string>
    <string name="add_details">Add Details</string>
    <string name="credit_debit_amp_atm_cards"><![CDATA[Credit, Debit & ATM Cards]]></string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="pay_via_upi">Pay via UPI</string>
    <string name="phonepay">PhonePay</string>
    <string name="paytm">Paytm</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date_mm_yy">Expiry Date (MM/YY)</string>
    <string name="place_order">Place Order</string>
    <string name="delivering_to">DELIVERING TO</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="chandrika">Chandrika</string>
    <string name="main_road">Main Road</string>
    <string name="_4_3">4.3</string>
    <string name="_150_per_two">150 per two</string>
    <string name="menu">Menu</string>
    <string name="_0">0</string>
    <string name="my_account">My Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="congratulations">Congratulations</string>
    <string name="your_order_has_been_placed">Your Order has been placed</string>
    <string name="go_to_dashboard">Go TO Dashboard</string>
    <string name="you_pay">You Pay</string>
    <string name="item_name">Item Name</string>
    <string name="my_cart">My Cart</string>
    <string name="items">Items</string>
    <string name="welcome_to_food_panda">Welcome to Food Panda</string>
    <string name="chicken_biriryani">chicken_biriryani</string>
    <string name="_200">200</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="dont_have_an_account1">Dont have an Account?</string>
    <string name="signup">SignUp</string>
    <string name="_2_3kms">2.3kms</string>
    <string name="sri_kanya">Sri Kanya</string>
    <string name="_200_for_two">₹ 200 for two</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="ex_1234567890">Ex : 1234567890</string>
    <string name="enter_the_password">enter the password</string>
    <string name="re_enter_the_password1">Re-enter the password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="submit">Submit</string>
</resources>