<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">
    <TextView
        android:id="@+id/labelforpayment"
        android:layout_width="match_parent"
        android:text="@string/select_payment_method"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="#000"
        android:gravity="center"
        android:layout_height="wrap_content">
    </TextView>
    <Button
        android:id="@+id/cardpay"
        android:layout_width="match_parent"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="40dp"
        android:text="@string/credit_debit_amp_atm_cards"
        android:layout_below="@+id/labelforpayment"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/upi"
        android:layout_width="match_parent"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="0dp"
        android:text="@string/pay_via_upi"
        android:layout_below="@+id/cardpay"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/Paytm"
        android:layout_width="match_parent"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="0dp"
        android:text="@string/paytm"
        android:layout_below="@+id/upi"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/Phonepay"
        android:layout_width="match_parent"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="0dp"
        android:text="@string/phonepay"
        android:layout_below="@+id/Paytm"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/cashondelivery"
        android:layout_width="match_parent"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="0dp"
        android:text="@string/cash_on_delivery"
        android:layout_below="@+id/Phonepay"
        android:layout_height="wrap_content">
    </Button>
    <FrameLayout
        android:id="@+id/fragment"
        android:layout_below="@+id/cashondelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    </FrameLayout>
    <Button
        android:id="@+id/submit"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:background="@color/colorBlack"
        android:text="@string/place_order"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/></RelativeLayout>

