<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardFragment">

    <TextView
        android:text="@string/add_details"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp">
    </TextView>
    <EditText
        android:id="@+id/cardname"
        android:layout_marginTop="50dp"
        android:hint="@string/name_on_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill"
        android:layout_marginStart="20dp"
        android:inputType="text">
    </EditText>
    <EditText
        android:id="@+id/cardnumber"
        android:hint="@string/card_number"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,TextFields"
        android:layout_marginStart="20dp"
        android:inputType="text">
    </EditText>
    <EditText
        android:hint="@string/expiry_date_mm_yy"
        android:id="@+id/expirydate"
        android:layout_marginTop="160dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill"
        android:layout_marginStart="20dp"
        android:inputType="text">
    </EditText>



</FrameLayout>