<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cart_list"
            android:background="@color/grey"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bill_layout"
            android:background="@color/white"
            android:layout_below="@+id/cart_list"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_title"
                android:text="@string/bill_details"
                android:textStyle="bold"
                android:textColor="@color/grey_text"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/h_total"
                android:layout_below="@+id/t_title"
                android:padding="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/cart_total"
                android:textSize="14sp"
                android:textColor="@color/grey_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupee_symbol"
                android:layout_below="@+id/t_title"
                android:gravity="center_vertical|end"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="32dp"
                android:layout_alignTop="@+id/h_total"
                android:layout_alignBottom="@+id/h_total"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_total"
                android:layout_below="@+id/t_title"
                android:gravity="center_vertical"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/h_total"
                android:layout_alignBottom="@+id/h_total"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/h_delivery"
                android:text="@string/delivery_charges"
                android:textColor="@color/grey_text"
                android:padding="4dp"
                android:layout_marginStart="4dp"
                android:layout_below="@+id/t_total"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_delivery"
                android:text="@string/Free"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical|end"
                android:layout_below="@+id/t_total"
                android:layout_alignTop="@+id/h_delivery"
                android:layout_alignBottom="@+id/h_delivery"/>
            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:id="@+id/line"
                android:layout_below="@+id/t_delivery"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/line"
                android:layout_marginEnd="32dp"
                android:text="@string/rupee_symbol"
                android:layout_marginTop="8dp"
                android:padding="4dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_grand_total"
                android:gravity="center_vertical|end"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/line"
                android:layout_marginTop="8dp"
                android:padding="4dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/h_pay"
                android:text="@string/you_pay"
                android:textStyle="bold"
                android:layout_below="@id/line"
                android:padding="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_toStartOf="@id/line"/>
        </RelativeLayout>

        <Button
            android:id="@+id/placeOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:layout_below="@+id/bill_layout"
            android:background="@color/colorBlack"
            android:text="@string/placeOrder" />
    </RelativeLayout>
</ScrollView>