<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuItemsActivity">
    <TextView
        android:id="@+id/restname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/chandrika"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp">
    </TextView>
    <TextView
        android:id="@+id/rest_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restname"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/main_road"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/rest_dist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rest_location"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/main_road"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_below="@+id/restname"
        android:layout_alignBaseline="@+id/restname"
        android:src="@drawable/ic_star"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="55dp"
        tools:ignore="MissingConstraints"/>
    <TextView
        android:id="@+id/restrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_3"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/restname"
        android:layout_alignBaseline="@+id/rest_location"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/restcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rest_location"
        android:layout_alignBaseline="@+id/rest_dist"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/_150_per_two"
        android:textColor="#000"
        android:textSize="15sp">
    </TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/rest_dist"
        android:layout_marginTop="10dp"
        android:background="@color/grey"/>
    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/restrate"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp">
    </TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/menu"
        android:layout_marginTop="10dp"
        android:background="@color/grey"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyle"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="510dp">


    </androidx.recyclerview.widget.RecyclerView>
    <androidx.appcompat.widget.Toolbar

        android:id="@+id/cart_view"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ratingHigh"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/i_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_cart" />

            <TextView
                android:id="@+id/t_cart_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/i_cart"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/_0"
                android:textColor="@color/white" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/i_cart"
                android:layout_alignBottom="@+id/i_cart"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@+id/t_cart_count"
                android:background="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/b_cart"
                android:layout_toEndOf="@+id/divider"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/rupee_symbol"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/t_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/b_cart"
                android:layout_toEndOf="@+id/divider"
                android:paddingStart="11dp"
                android:paddingEnd="11dp"

                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_cart"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="-3dp"
                android:gravity="center"
                android:text="@string/view_cart"
                android:textColor="@color/white" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

</RelativeLayout>